Use CompileCommand instead of CompilerDirectivesFile. Run jtreg test in various configurations.